--- a/{{ cookiecutter.plugin }}/pyproject.toml
+++ b/{{ cookiecutter.plugin }}/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
-name = "rsserpent-plugin-{{name}}"
+name = "{{ cookiecutter.plugin }}"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["{{ cookiecutter.username }} <{{ cookiecutter.email }}>"]
 
 [tool.poetry.dependencies]
 python = "^3.6.2"
+rsserpent = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 
