--- a/{{ cookiecutter.plugin }}/pyproject.toml
+++ b/{{ cookiecutter.plugin }}/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.6.2"
 rsserpent = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
+pre-commit = "^2.15.0"
+uvicorn = "^0.15.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
