--- a/{{ cookiecutter.plugin }}/pyproject.toml
+++ b/{{ cookiecutter.plugin }}/pyproject.toml
@@ -16,6 +16,16 @@ rsserpent = "^0.1.3"
 pre-commit = "^2.15.0"
 uvicorn = "^0.15.0"
 
+[tool.black]
+include = '\.pyi?$'
+target-version = ["py36", "py37", "py38", "py39"]
+
+[tool.isort]
+balanced_wrapping = true
+combine_as_imports = true
+lines_after_imports = 2
+profile = "black"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
