--- a/{{ cookiecutter.plugin }}/pyproject.toml
+++ b/{{ cookiecutter.plugin }}/pyproject.toml
@@ -15,10 +15,25 @@ rsserpent = "^0.1.3"
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.15.0"
 uvicorn = "^0.15.0"
+# testing
+pytest = "^6.2.4"
+pytest-asyncio = "^0.15.1"
+pytest-cov = "^2.12.1"
+pytest-randomly = "^3.10.1"
+pytest-xdist = "^2.3.0"
 
 [tool.black]
 include = '\.pyi?$'
 target-version = ["py36", "py37", "py38", "py39"]
+
+[tool.coverage.run]
+include = ["{{ cookiecutter.plugin.lower().replace('-','_') }}/*"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "if TYPE_CHECKING:",
+    "pragma: no cover"
+]
 
 [tool.isort]
 balanced_wrapping = true
