--- a/{{ cookiecutter.plugin }}/pyproject.toml
+++ b/{{ cookiecutter.plugin }}/pyproject.toml
@@ -22,6 +22,9 @@ pytest-cov = "^2.12.1"
 pytest-randomly = "^3.10.1"
 pytest-xdist = "^2.3.0"
 
+[tool.poetry.plugins."rsserpent.plugin"]
+"{{ cookiecutter.plugin.removeprefix('rsserpent-plugin-') }}" = "{{ cookiecutter.plugin.lower().replace('-','_') }}:plugin"
+
 [tool.black]
 include = '\.pyi?$'
 target-version = ["py36", "py37", "py38", "py39"]
