--- a/{{ cookiecutter.plugin }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.plugin }}/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
     rev: v2.26.0
     hooks:
       - id: pyupgrade
+        name: Upgrade Python Syntax
   - repo: https://github.com/crate-ci/typos
     rev: typos-v0.7.4
     hooks:
@@ -42,6 +43,7 @@ repos:
         # As `mypy` runs in an isolated environment, it is necessary to manually specify
         # some libraries of the current (poetry) environment for `mypy` to work properly.
         additional_dependencies:
+          - pytest
           - rsserpent
   - repo: https://github.com/PyCQA/flake8
     rev: 3.9.2
