--- a/{{ cookiecutter.plugin }}/.github/workflows/test.yaml
+++ b/{{ cookiecutter.plugin }}/.github/workflows/test.yaml
@@ -30,20 +30,17 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: {{ "${{ matrix.python-version }}" }}
       - uses: actions/cache@v2
         with:
           path: |
             ~/.cache/pip
             .venv
-          key: ${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
+          key: {{ "${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}" }}
       - name: "Setup Poetry"
         run: |
           pip install --upgrade pip
           pip install --user poetry
-          poetry config virtualenvs.in-project true
-      - name: "Install Dependencies"
-        run: |
           poetry install
       - name: "Generate Coverage Report"
         run: poetry run pytest --cov --cov-report=xml -n auto
