--- a/{{ cookiecutter.plugin }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.plugin }}/.pre-commit-config.yaml
@@ -1,6 +1,16 @@
+ci:
+  autofix_commit_msg: "ci: pre-commit auto fixes"
+  autoupdate_commit_msg: "ci: pre-commit auto update"
 default_stages: [commit]
 fail_fast: true
 repos:
+  - repo: https://github.com/andreoliwa/nitpick
+    rev: v0.27.0
+    hooks:
+      - id: nitpick-check
+        name: Nitpick Check
+        always_run: true
+        pass_filenames: false
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
@@ -62,6 +72,7 @@ repos:
           - flake8-print
           - flake8-too-many
           - pep8-naming
+          - tryceratops
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v2.18.1
     hooks:
