--- a/{{ cookiecutter.plugin }}/pyproject.toml
+++ b/{{ cookiecutter.plugin }}/pyproject.toml
@@ -44,6 +44,10 @@ combine_as_imports = true
 lines_after_imports = 2
 profile = "black"
 
+[tool.nitpick]
+style = "gh://rsserpent/rsserpent/styles/main.toml"
+cache = "1 day"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
