--- a/{{ cookiecutter.plugin }}/mypy.ini
+++ b/{{ cookiecutter.plugin }}/mypy.ini
@@ -5,6 +5,9 @@ python_version = 3.6
 show_error_codes = True
 strict = True
 
+[mypy-pyquery.*]
+ignore_missing_imports = True
+
 [pydantic-mypy]
 init_forbid_extra = True
 init_typed = True
