--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,7 @@ on:
       - '{{ cookiecutter.plugin }}/**'
       - 'cookiecutter.json'
       - 'hooks/**'
+  workflow_dispatch:
 
 jobs:
   run:
