--- a/{{ cookiecutter.plugin }}/pyproject.toml
+++ b/{{ cookiecutter.plugin }}/pyproject.toml
@@ -16,6 +16,7 @@ rsserpent = ">=0.1.4"
 pre-commit = "^2.15.0"
 uvicorn = "^0.15.0"
 # testing
+coverage = {extras = ["toml"], version = "^6.0"}
 pytest = "^6.2.4"
 pytest-asyncio = "^0.15.1"
 pytest-cov = "^2.12.1"
